<resources>
    <string name="app_name">Yukon Vaccination Verifier</string>
    <string name="y_k_vaccine_card_verifier">Yukon Vaccination Verifier</string>
    <string name="yk_vaccine_verifier">Vaccination Verifier</string>
    <string name="yukon_official_result">Official Government of Yukon result</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="partially_vaccinated">Partially\nvaccinated</string>
    <string name="vaccinated">Fully vaccinated</string>
    <string name="scan_next">Scan next</string>
    <string name="text_ok">OK</string>

    <string name="yk_camera_permission_title">Allow camera access</string>
    <string name="yk_camera_permission_message">We need permission to access your camera to be able to use this service to scan an official government-issued QR code.</string>
    <string name="yk_btn_allow_camera_access">Allow access</string>


    <string name="yk_invalid_barcode_title">Invalid QR Code</string>
    <string name="yk_invalid_barcode_message">Please scan an official government-issued QR code.</string>

    <string name="yk_permission_required_title">Oops!</string>
    <string name="yk_permission_message">This app requires camera permission. This permission is required in order to scan an official proof of vaccination.\nTo enable camera access go to settings to grant permissions.</string>
    <string name="exit">Exit</string>

    <string name="yk_no_rear_camera_title">Oops!</string>
    <string name="yk_nor_rear_camera_message">Oops, It seems your device does not have a rear camera\nWe do not support scanning an official proof of vaccination using the front camera at the moment.</string>

    <string name="btn_data_collection_notice">Data collection notice</string>

    <string name="no_app_found">No app found to open link!</string>

    <string name="in_app_update_message">Newer version is ready to install.</string>
    <string name="update">Update</string>

    <string name="yk_select_a_language" translatable="false">Select a language</string>
    <string name="yk_selectionnez_une_langue" translatable="false">Sélectionnez une langue</string>
    <string name="yk_text_english" translatable="false">English</string>
    <string name="yk_text_french" translatable="false">Français</string>
    <string name="yk_text_en" translatable="false">En</string>
    <string name="tv_fr" translatable="false">Fr</string>
    <string name="btn_covid_info">COVID-19 information</string>
    <string name="meets_requirement">Meets requirement</string>
    <string name="partially_meets_requirement">Partially meets \n requirement</string>
    <string name="does_not_meet_requirement">Does not meet requirement</string>

</resources>