<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_yk_app_logo"
        app:layout_constraintBottom_toTopOf="@+id/txt_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_app_name"
        style="?textAppearanceHeadline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:text="@string/yk_vaccine_verifier"
        app:layout_constraintBottom_toTopOf="@+id/iv_splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl"
        android:src="@drawable/ic_yk_app_logo_splash"
        app:layout_constraintBottom_toTopOf="@+id/txt_yk_select_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_yk_select_language"
        style="?textAppearanceBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/yk_select_a_language"
        app:layout_constraintBottom_toTopOf="@+id/txt_yk_select_language_fr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash_logo" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_yk_select_language_fr"
        style="?textAppearanceBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/yk_selectionnez_une_langue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_yk_select_language" />


    <RadioGroup
        android:id="@+id/radio_group_language"
        android:gravity="center"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_yk_select_language_fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="?radioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/yk_text_english" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="?radioButtonStyle"
            android:layout_marginTop="@dimen/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/yk_text_french" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>