<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/scanner_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ca.yk.gov.vaxcheck.ui.custom.ViewFinderOverlay
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layerType="software" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_en"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            style="?textAppearanceBody2"
            android:layout_margin="@dimen/medium"
            android:text="@string/yk_text_en"
            android:layout_height="wrap_content"/>



        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_locale"
            android:layout_marginStart="@dimen/small"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_en"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_fr"
            app:layout_constraintStart_toEndOf="@id/sw_locale"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            style="?textAppearanceBody2"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginStart="@dimen/small"
            android:text="@string/tv_fr"
            android:layout_height="wrap_content"/>




        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:button="@drawable/ic_flash_selector"
            android:buttonTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_covid_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/btn_covid_info"
            android:background="@color/dark_blue"
            android:paddingTop="@dimen/medium"
            android:paddingBottom="@dimen/medium"
            app:layout_constraintBottom_toTopOf="@id/txt_privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/btn_privacy_policy"
            android:background="@color/dark_blue"
            android:paddingTop="@dimen/medium"
            android:paddingBottom="@dimen/medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>